[package]
name = "rustfest-game"
version = "0.1.0"
authors = ["Vurich <jackefransham@hotmail.co.uk>"]

[dependencies]
cgmath = "*"
piston2d-graphics = "*"
piston_window = "*"
serde = "*"
serde_derive = "*"
rmp = "*"
rmp-serde = "*"
arrayvec = "*"
itertools = "*"
getopts = "*"
rusttype = "*"
rand = "*"
mio = "*"

[profile.release]
panic = "abort"
lto = true
